export interface CityResponseModel {
  cityId: string;
  name: string;
  countryId: string;
}
  
export interface CityRequestModel {
  name: string;
  countryId: string;
}
  