export interface CountryResponseModel {
  countryId: string;
  name: string;
  image: string;
}

export interface CountryRequestModel {
  name: string;
  image: string;
}
